# SlicerMixedReality

./: CMakeLists.txt  CTestConfig.cmake  FetchVTKExternalModule.cmake  README.md  SuperBuildPrerequisites.cmake
MixedReality/: CMakeLists.txt  qSlicerMixedRealityModule.cxx  qSlicerMixedRealityModule.h  qSlicerMixedRealityModuleWidget.cxx  qSlicerMixedRealityModuleWidget.h
MixedReality/Logic/: vtkSlicerMixedRealityLogic.cxx  vtkSlicerMixedRealityLogic.h
MixedReality/MRML/: CMakeLists.txt  vtkMRMLMixedRealityViewDisplayableManagerFactory.cxx  vtkMRMLMixedRealityViewDisplayableManagerFactory.h  vtkMRMLMixedRealityViewNode.cxx  vtkMRMLMixedRealityViewNode.h  vtkMixedRealityViewInteractor.cxx  vtkMixedRealityViewInteractor.h  vtkMixedRealityViewInteractorStyle.cxx  vtkMixedRealityViewInteractorStyle.h
MixedReality/Resources/: qSlicerMixedRealityModule.qrc
MixedReality/Resources/UI/: qSlicerMixedRealityFooBarWidget.ui  qSlicerMixedRealityModuleWidget.ui
MixedReality/Widgets/: CMakeLists.txt  qMRMLMixedRealityView.cxx  qMRMLMixedRealityView.h  qMRMLMixedRealityView_p.h  qSlicerMixedRealityFooBarWidget.cxx  qSlicerMixedRealityFooBarWidget.h
SuperBuild/: External_OpenXR-SDK.cmake  External_vtkRenderingOpenXR.cmake  External_vtkRenderingOpenXRRemoting.cmake  External_vtkRenderingVR.cmake
